Simplified code and unhide the overlay top variable