@@ -81,7 +81,7 @@ public abstract class AbstractPage extends BorderPane implements Page {
     }
 
     protected Overlay lookupOverlay() {
-        return getScene() != null && getScene().lookup("." + Overlay.STYLE_CLASS) instanceof Overlay overlay ? overlay : null;
+        return getScene() != null && getScene().lookup("." + Overlay.STYLE_CLASS) instanceof Overlay ov ? ov : null;
     }
 
     ///////////////////////////////////////////////////////////////////////////
@@ -93,7 +93,7 @@ public abstract class AbstractPage extends BorderPane implements Page {
     }
 
     protected <T> List<T> generate(Supplier<T> supplier, int count) {
-        return Stream.generate(supplier).limit(count).collect(Collectors.toList());
+        return Stream.generate(supplier).limit(count).toList();
     }
 
     protected Feather randomIcon() {
